<resources>
    <string name="cal_detail_tip">注：本商品最后一个夺宝码分配时间对应的“老时时彩”期数因福利中心未开奖或福彩中心通讯故障导致未能及时揭晓的，将默认按“老时时彩”开奖结果为“00000”计算揭晓。</string>
    <string name="cal_detail_type3">"老时时彩"期数因福利中心未开奖或福彩中心通讯故障导致未能及时揭晓的，将以随机产生的结果为准！</string>
    <string name="app_name">任意购</string>
    <string name="app_commi">佣金提现</string>
    <string name="home_tabtitle">任意购首页</string>
    <string name="home_title">任意筹·任意购</string>
    <string name="cata_subtitle1">最新揭晓</string>
    <string name="share_tabtitle">晒单</string>
    <string name="share_title1">晒单</string>
    <string name="cart_tabtitle">任意购物车</string>
    <string name="cart_title">购物车</string>
    <string name="mycenter_tabtitle">我的任意购</string>
    <string name="mycenter_title">我的</string>
    <string name="my_center">个人中心</string>
    <string name="album_name">Camera</string>
    <string name="ttf_search">U</string>
    <string name="ttf_back">4</string>
    <string name="ttf_refresh">140</string>
    <string name="regist_alert_phone_not_empty">手机号不能为空</string>
    <string name="regist_alert_password_not_empty">密码不能为空</string>
    <string name="regist_alert_phone_not_legal">请填写合法的手机号</string>
    <string name="regist_alert_pwd_too_short">密码长度不能少于6位</string>
    <string name="regist_alert_pwd_not_legal">密码仅能包含字母和数字</string>
    <string name="regist_input_title_phone">手机号</string>
    <string name="regist_input_hint_phone">请填写手机号</string>
    <string name="regist_input_hint_verifycode">请填写短信验证码</string>
    <string name="regist_input_hint_captcha">请填写右侧验证码</string>
    <string name="regist_msg_sendedto">短信验证码已发送至</string>
    <string name="regist_msg_sendedtodef">13149302507</string>
    <string name="regist_input_title_code">验证码</string>
    <string name="regist_input_hint_code">请填写密码</string>
    <string name="registconfirm_input_hint_code">请填写确认密码</string>
    <string name="login_input_hint_pwd">请填写密码</string>
    <string name="regist_page_title">注册</string>
    <string name="regist_cfmsend_btn">获取验证码</string>
    <string name="regist_countdown_btn">重新发送</string>
    <string name="regist_cfmregist_btn">提交验证码</string>
    <string name="regist_checkbox_hint">我已阅读并同意</string>
    <string name="yy_regist_checkbox_btn">《一元乐购服务协议》</string>
    <string name="regist_checkbox_btn">《一元乐购服务协议》</string>
    <string name="cart_item_hint">购物车还是空的,快去选购吧~ !</string>
    <string name="tab_home_grid_door">任意门</string>
    <string name="tab_home_grid_recommend">往期回顾</string>
    <string name="tab_home_grid_helpcenter">任意购说明</string>
    <string-array name="home_gridcell_title">
        <item>@string/tab_home_grid_door</item>
        <item>@string/tab_home_grid_recommend</item>
        <item>@string/tab_home_grid_helpcenter</item>
    </string-array>
    <string-array name="yy_home_gridcell_title">
        <item>@string/tab_home_grid_blockreal</item>
        <item>@string/tab_home_grid_blockten</item>
        <item>@string/tab_home_grid_share</item>
    </string-array>
    <string name="dialog_transferred_balance">该商品转到余额的金额是：</string>
    <string name="account_locked">该帐号已经被锁定</string>
    <string name="action_back">返回</string>
    <string name="action_cancle">取消</string>
    <string name="action_clear">清除</string>
    <string name="action_done">完成</string>
    <string name="action_edit">编辑</string>
    <string name="action_home">返回首页</string>
    <string name="action_refresh">刷新</string>
    <string name="action_share">分享</string>
    <string name="activity_follow">多期参与</string>
    <string name="activity_followlist">多期参与详情</string>
    <string name="activity_order_code_list">夺宝详情</string>
    <string name="add">添加</string>
    <string name="addShareContent">获奖感言不少于30个字</string>
    <string name="addShareTitle">晒单主题，不少于6个字</string>
    <string name="add_all">全部加入清单</string>
    <string name="add_ship_address">添加地址</string>
    <string name="add_success">添加成功</string>
    <string name="add_to_cart">放入购物车</string>
    <string name="auth_result_back">登录返回</string>
    <string name="auth_result_cancel">取消登录</string>
    <string name="auth_result_err">登录失败</string>
    <string name="back">返回</string>
    <string name="blank_duobao_record">还没有夺宝记录哦</string>
    <string name="blank_line">占位线</string>
    <string name="blank_subtitle_duobao_record">不妨先去夺宝试试看</string>
    <string name="bonus_guide_button">我知道啦，立即1元夺宝></string>
    <string name="buyWangpan">充值获得夺宝币(1元=1夺宝币)，可用于夺宝，充值的款项将无法退回。</string>
    <string name="buy_after">跟买</string>
    <string name="buy_more">追加</string>
    <string name="title_alert">请输入密码</string>
    <string name="cancel">取消</string>
    <string name="cart">清单</string>
    <string name="cart_money_desc">%s夺宝币</string>
    <string name="cart_multi_del_empty">请选择要删除的商品~</string>
    <string name="cart_multi_summary">共选中0件商品</string>
    <string name="cart_number_desc">共%1$s件商品，</string>
    <string name="cart_number_lable">参与人次</string>
    <string name="cart_period_lable">参与期数</string>
    <string name="cart_promote_summary">再加%1$s元，即可%2$s</string>
    <string name="cart_total">总计：</string>
    <string name="check_bonus">查看红包</string>
    <string name="check_bonus_guide">查看红包使用教程</string>
    <string name="balance_value">（%1$s，折扣￥%2$s）</string>
    <string name="check_my_code">查看详情</string>
    <string name="check_ta_code">查看TA的号码</string>
    <string name="chooseMoney">选择充值金额（元）</string>
    <string name="choosePayment">选择支付方式</string>
    <string name="choose_area_a">请选择省份</string>
    <string name="choose_area_b">请选择城市</string>
    <string name="choose_area_c">请选择地区</string>
    <string name="close">关闭</string>
    <string name="coin" formatted="false">￥%s</string>
    <string name="confirm_delete">确定删除？</string>
    <string name="conversion_error">处理请求体错误，请稍后再试</string>
    <string name="cookie_expried">认证过期，请重新登录</string>
    <string name="countly_hook_name">com.netease.mail.oneduobaohydrid.contly.CountlyHook</string>
    <string name="default_loading_mask_tips">努力加载中……</string>
    <string name="delete">删除</string>
    <string name="delete_success">删除成功！</string>
    <string name="desc_checkbox">复选框</string>
    <string name="desc_goods_pic">商品图片</string>
    <string name="desc_new_bonus">"恭喜您
获得新的红包!"</string>
    <string name="desc_progress">加载进度条</string>
    <string name="dot_dot_dot">···</string>
    <string name="download_upgrade">下载升级</string>
    <string name="detail_footer_add_cart">加入购物车</string>
    <string name="detail_footer_buy_rn">立即购买</string>
    <string name="detail_good_title_text" formatted="false">（第%d期）%s</string>
    <string name="home_good_progressbar_total">开奖进度 %1$s%</string>
    <string name="payresult_query_charge_failed">充值结果未成功返回，请进入账号明细确认详情。</string>
    <string name="go_checkresult">查看充值记录</string>
    <string name="go_repay">重新支付</string>
    <string name="CHARGE_SUCCESS">恭喜您，充值成功！</string>
    <string name="payresult_query_buy_failed">购买结果未成功返回，请进入购买记录确认详情。</string>
    <string name="detail_good_progressbar_joined" formatted="false">已参与%d</string>
    <string name="detail_join_count"><Data><![CDATA[ 本期参与：<font color="#d25e05">%1$d</font>人次 ]]></Data></string>
    <string name="duobao_bonus_status_enable">可使用</string>
    <string name="duobao_bonus_status_overdue">已使用/过期</string>
    <string name="duobao_bonus_status_standby">待派发</string>
    <string name="duobao_record_add_cart_error">添加购物车错误请稍后再试</string>
    <string name="duobao_record_add_cart_fail">添加错误请稍后再试</string>
    <string name="duobao_record_add_cart_success">添加成功</string>
    <string name="duobao_record_error">夺宝记录数据获取不正常！</string>
    <string name="duobao_record_fail">夺宝记录数据获取失败</string>
    <string name="duobao_record_fetch_error">数据获取失败</string>
    <string name="duobao_record_get_code_error">获取我的夺宝码失败，请检查网络！</string>
    <string name="duobao_record_no_join">您没有参与本期夺宝哦！</string>
    <string name="duobao_record_offline">该商品已下架</string>
    <string name="duobao_record_status_all">全部</string>
    <string name="duobao_record_status_ing">进行中</string>
    <string name="duobao_record_status_over">已揭晓</string>
    <string name="duobao_record_unusual">获取信息不正常，请返回！</string>
    <string name="emptyCart">你的购物车空空如也</string>
    <string name="emptyMyShare">您还没有晒单哦</string>
    <string name="emptyMyWinRecord">您还没有中奖记录哦</string>
    <string name="emptyMyWinRecordHint">继续加油夺宝啊</string>
    <string name="emptyNotPaid">没有未支付订单哦</string>
    <string name="emptyOtherShare">该用户还没有晒单哦</string>
    <string name="emptyShare">还没有晒单哦</string>
    <string name="emptyWinRecord">他还没有中奖记录哦</string>
    <string name="end">已到达列表底部~</string>
    <string name="error_net">接收网络数据失败</string>
    <string name="find">发现</string>
    <string name="forgot_password">忘记密码?</string>
    <string name="free_mail">邮箱帐号/手机号码</string>
    <string name="get_captcha">获取验证码</string>
    <string name="get_userinfo_failed">无法获取用户信息</string>
    <string name="get_userinfo_success">成功获取用户信息</string>
    <string name="goToBuy">马上去乐购</string>
    <string name="go_look">去看看</string>
    <string name="good_detail_load">点击查看夺宝记录</string>
    <string name="goon">继续</string>
    <string name="goshare">立即晒单</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_world">Hello world!</string>
    <string name="http_error">服务器响应错误，请稍后再试</string>
    <string name="index_tab_kind">分类</string>
    <string name="index_tab_qa">常见问题</string>
    <string name="index_tab_share">晒单</string>
    <string name="index_tab_ten">10元专区</string>
    <string name="intro_button1">继续</string>
    <string name="intro_button2">开始%1$s</string>
    <string name="intro_subtitle1">只要1元就有机会获得一件商品</string>
    <string name="intro_subtitle2">数万份晒单共同分享喜悦</string>
    <string name="intro_title2">你也会和他们一样</string>
    <string name="kind_browse">分类浏览</string>
    <string name="list_end">-- 已到达列表底部 --</string>
    <string name="loading">正在加载中…</string>
    <string name="loading_more">正在加载更多…</string>
    <string name="usercenter_bt_login">登录/注册</string>
    <string name="login_failed">登录失败</string>
    <string name="login_success">登录成功！</string>
    <string name="logout">退出登录</string>
    <string name="choose_btn_phone_recharge">充值</string>
    <string name="choose_btn_withdraw_deposit">虚拟充值</string>
    <string name="choose_btn_to_balance">转到余额</string>
    <string name="choose_btn_to_realshop">实体店领取</string>
    <string name="choose_tips_phone_recharge">可直接充值到手机中。</string>
    <string name="choose_tips_to_balance">可将该商品金额转入到账户余额。</string>
    <string name="choose_tips_gorealshop">请致电客服询问领取详情。</string>
    <string name="choose_btn_to_friend">赠予好友</string>
    <string name="choose_tips_to_friend">可将该奖品赠予好友</string>
    <string name="choose_btn_to_ali">转到支付宝</string>
    <string name="choose_tips_to_ali">可将该奖品金额转入到指定的支付宝账号</string>
    <string name="choose_btn_to_getreal">实物领取</string>
    <string name="choose_tips_to_getreal">选择实物领取后，请先维护收货地址，等待商家发货邮寄</string>
    <string name="title_activity_lstanounce">最新揭晓</string>
    <string name="yy_home_tabtitle">首页</string>
    <string name="yy_cart_tabtitle">购物车</string>
    <string name="yy_mycenter_tabtitle">我的乐购</string>
    <string name="yy_allgood_tabtitle">所有商品</string>
    <string name="my_commission">我的佣金：%s元</string>
    <string name="lable_cashout">提现金额：</string>
    <string name="hint_enter_cashout">请输入提现金额</string>
    <string name="yuan">元</string>
    <string name="cashout_tips">只能提现100的整数倍金额</string>
    <string name="cashout_ways">提现方式</string>
    <string name="next">下一步</string>
    <string name="cashoutform_ways">开户银行：</string>
    <string name="cashoutnow">立即提现</string>
    <string name="hint_co_alipay">请输入您的账号</string>
    <string name="cashout_amount">提现金额：%s元</string>
    <string name="cashout_account_owner">持卡人：</string>
    <string name="cashout_account_bunch">开户行网点：</string>
    <string name="cashout_account_phone">联系电话：</string>
    <string name="hint_co_bunch">请输入开户行网点</string>
    <string name="hint_co_phone">请输入联系人电话</string>
    <string name="hint_co_owner">请输入姓名</string>
</resources>