<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:my="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@id/toolbar"
        layout="@layout/include_top_adjust_gray" />

    <TextView
        android:id="@id/tv_amount"
        style="@style/OptionBar"
        android:background="@drawable/btn_transparent_gray_noborder"
        android:minHeight="30dp"
        android:paddingBottom="3dp"
        android:paddingTop="3dp"
        android:text="@string/cashout_amount"
        android:textColor="@drawable/textcolor_textview_gray"
        android:textSize="@dimen/abc_text_size_very_small_material" />

    <LinearLayout
        style="@style/OptionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal">

        <TextView
            style="@style/TextView.medium"
            android:layout_height="match_parent"
            android:layout_marginRight="14dp"
            android:gravity="center_vertical"
            android:text="@string/cashoutform_ways" />

        <Spinner
            android:id="@id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dialog"
            android:visibility="gone" />

        <LinearLayout
            android:id="@id/wraper_option"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:visibility="gone">

            <ImageView
                android:id="@+id/pay_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/page_boarder_margin" />

            <TextView
                android:id="@id/pay_way"
                style="@style/TextView.gray"
                android:layout_height="match_parent" />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/option_account"
        style="@style/OptionBar">

        <TextView
            android:id="@id/label_account"
            style="@style/TextView.medium"
            android:gravity="left"
            android:minWidth="80dp"
            android:text="账号：" />

        <com.shawnway.nav.app.yylg.view.ClearEditView
            android:id="@id/inputer_account"
            style="@style/EditText"
            android:inputType="number"
            android:background="@null"
            android:hint="@string/hint_co_alipay" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/option_account_owner"
        style="@style/OptionBar"
        android:visibility="gone">

        <TextView
            style="@style/TextView.medium"
            android:gravity="left"
            android:minWidth="80dp"
            android:text="@string/cashout_account_owner"
            />

        <com.shawnway.nav.app.yylg.view.ClearEditView
            android:id="@id/inputer_owner"
            style="@style/EditText"
            android:maxLength="30"
            android:background="@null"
            android:hint="@string/hint_co_owner" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/option_account_bunch"
        style="@style/OptionBar"
        android:visibility="gone">

        <TextView
            style="@style/TextView.medium"
            android:gravity="left"
            android:minWidth="80dp"
            android:text="@string/cashout_account_bunch" />

        <com.shawnway.nav.app.yylg.view.ClearEditView
            android:id="@id/inputer_bunch"
            style="@style/EditText"
            android:maxLength="40"
            android:background="@null"
            android:hint="@string/hint_co_bunch"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/option_account_phone"
        style="@style/OptionBar"
        android:visibility="gone">

        <TextView
            style="@style/TextView.medium"
            android:gravity="left"
            android:minWidth="80dp"
            android:text="@string/cashout_account_phone" />

        <com.shawnway.nav.app.yylg.view.ClearEditView
            android:id="@+id/inputer_phone"
            style="@style/EditText"
            android:maxLength="40"
            android:background="@null"
            android:hint="@string/hint_co_phone"
            />
    </LinearLayout>

    <Button
        android:id="@id/btn_next"
        style="@style/Button.main.deep"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:minWidth="200dp"
        android:onClick="onClick"
        android:text="@string/cashoutnow" />
</LinearLayout>